@@ -11,12 +11,10 @@ inv <- function(a) {
 		stop("Matrix 'a' must be square.")
 
 	e <- try(b <- solve(a), silent=TRUE)
-	if (class(e) == "matrix")
-	    return(b)
-	else {
+	if(inherits(e, "try-error")) {
 		warning("Matrix appears to be singular.")
 		b <- rep(Inf, length(a))
 		dim(b) <- dim(a)
-		return(b)
 	}
+	return(b)
 }
