@@ -6,7 +6,8 @@
 CHANGES IN VERSION 2.2.9 (2019-12-15)
 
     o Changed URL reference of Abramowitz and Stegun (link missing).
-    o Fixed warning with the 'try' construct in inv() and broyden().
+    o Fixed warning with the 'try' construct in several functions
+      using 'if(inherits(e, "try-error"))' (help from Bert Gunter).
     o Link to R Base HTML help page gave a warning (for Windows).
 
 CHANGES IN VERSION 2.2.8 (2019-07-09)
